--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ java {
 
 application {
     // Define the main class for the application.
-    mainClass = 'org.example.App'
+    mainClass = 'xyz.natefu.App'
 }
 
 tasks.named('test') {
